<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/line_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_fragment">

        <TimePicker
            android:id="@+id/time_picker_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:timePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/switch_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:textSize="15dp"
            android:text="Test"
            android:textColor="@color/add_text"
            tools:ignore="HardcodedText,SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/line_add"
            android:layout_marginBottom="3dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <ImageButton
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/monday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tuesday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/wednesday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/thursday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/friday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/saturday_gray"
                android:layout_marginLeft="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <ImageButton
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sunday_gray"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/audio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/line_add"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/audio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/audio_name_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="right"
                android:text="@string/default_music"
                android:textColor="@color/add_text"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/audio_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <ImageView
                android:id="@+id/audio_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/vibration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/line_add"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/vibration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/vibration"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <Switch
                android:id="@+id/vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/delete_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/line_add"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/delete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <Switch
                android:id="@+id/delete_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/line_add"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <EditText
                android:inputType="textCapSentences"
                android:imeOptions="actionUnspecified"
                android:id="@+id/description_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/alarm_name"
                android:textColor="@color/add_text"
                android:textSize="15dp"
                android:background="@color/line_add"
                android:maxLength="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/description_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,SpUsage,TextFields" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>